--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,35 @@
 			<version>9.0.1</version>
 		</dependency>
 
+		<!-- Log4J 2 Dependency -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+		</dependency>
+		<!-- Below one Common Logging Bridge, required for logging in file -->
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-jcl</artifactId>
+			<version>2.5</version>
+		</dependency>
+		<!-- As the Spring Boot starter POM uses Logback for logging, you need 
+			to exclude it and add the Log4J 2 dependencies. -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<!-- Log4J 2 Dependency -->
+
 	</dependencies>
 
 	<build>
