--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,13 @@ spring.datasource.platform=h2
 spring.datasource.url=jdbc:h2:mem:parking
 spring.mvc.view.suffix=.jsp
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+#Logger Configuration
+logging.level.org.springframework.web=INFO
+logging.level.target.cp.vehicle.parking.VehicleController=INFO
+logging.level.target.cp.vehicle.parking.OwnerController=DEBUG
+logging.level.target.cp.vehicle.parking.ParkingServiceApplication=INFO
+logging.level.org.hibernate=ERROR
+logging.file=logs/spring-boot-logging.log
+#log4j.logger.org.thymeleaf=DEBUG
+#Logger Configuration
